# Conductor

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
conductor/decode/: decode.sh  health_check.py
conductor/decode/within_dataset_decode/: decode.sh  health_check.py  start_decode.sh
conductor/evaluate/: check_data_link.sh  decode.sh  download_model.sh  ln_model.sh  ls_epoch.sh  result_evaluator.py  start_decode.sh
conductor/evaluate/model_comparer/: README.md  decode.sh  download_model.sh  wer_summary.py
conductor/evaluate/model_tester/: decode.sh  ln_exp.sh  sync_epoch.py  sync_epochs.py
conductor/evaluate/nodebuild/: README.md  setup.sh
conductor/monitor/: README.md  cancel_schedule_by_string.sh  health_check.py  monitor_process_cronjob.sh  process_monitor_alert.py  train.sh
conductor/train/: health_check.py  train.sh
conductor/utils/: __init__.py  basics.py  parse.py  toolkit.py
conductor/visualize/: report_html.py  template.html  wer_chart_generator.py
docker/: Dockerfile  README.md  compose.yaml  docker-compose.yaml  health_check.py  setup.py  train.sh
