[tool.poetry]
name = "conductor"
version = "0.1.0"
description = ""
authors = ["BannerWang <banner.wang@upblocks.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.8"
dingtalkchatbot = "^1.5.7"
langdetect = "^1.0.9"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
